package com.bookonrails.ooad.Model;

public enum Birth {
    Lower,
    Upper
}
