package com.bookonrails.ooad.Model;

public enum ClassType {
    AC2Tier,
    AC3Tier,
    Sleeper
}
