package com.bookonrails.ooad.Model;

public enum Gender {
    Male,
    Female,
    Other
}
