package Model;

public class Schedule {
    
}
