package Model;

public class Timings {
    
}
